fix: :bug: fix scrollbar in `Firefox` of page by removing it

--- a/src/index.scss
+++ b/src/index.scss
@@ -51,6 +51,10 @@
     display: none;
 }
 
+html {
+    scrollbar-width: none;
+}
+
 body {
     /* height: 20000px; */
     font-family: "Roboto", sans-serif;
